# llm-agent-synth-datasets

./: .env.example  .gitignore  README.md  pyproject.toml  ТЗ. Постановка задачи. Генерация синтетических датасетов для тестирования LLM-агентов.md
.github/workflows/: ci.yml
dataset_generator/: __init__.py  __main__.py  cli.py  pipeline.py
dataset_generator/core/: ids.py  markdown.py  models.py  text_sanitize.py
dataset_generator/extract/: __init__.py  case_classifier.py  drafts.py  drafts_to_models.py  heuristics.py  support_parser.py
dataset_generator/generate/: dataset.py  test_cases.py
dataset_generator/io/: __init__.py  writers.py
dataset_generator/llm/: __init__.py  base.py  (+2 more)
examples/: example_input_raw_doctor_booking.md  example_input_raw_operator_quality_checks.md  example_input_raw_support_faq_and_tickets.md
scripts/: run_official_validator.py
tests/: test_case_classifier.py  test_cli.py  test_cli_parsing.py  test_dataset_invariants.py  test_dataset_variation_operator_quality.py  test_e2e_generate_validate.py  test_e2e_generate_validate_real_out.py  test_examples_synced_with_tz.py  test_generate_validate_renamed_input.py  test_heuristics.py  test_ids.py  test_llm_clients.py  test_llm_drafts_applied.py  test_markdown_quote.py  test_models_schema.py  test_ollama_fallback_no_openai.py  test_ollama_uses_cli_model_over_env.py  test_smoke.py  test_support_output_clean_text.py  test_support_parser.py  test_testcase_counts.py  test_validate_path_resolution.py  test_validate_smoke.py  test_writers_roundtrip.py
tools/: extract_examples_from_tz.py
(+2 files in other folders)
