[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset_generator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "jsonschema",
  "openai>=1.0.0",
  "pydantic",
  "pytest",
  "rich",
  "typer",
  "python-dotenv",
]


[tool.hatch.build.targets.wheel]
packages = ["dataset_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
